# L4FIN

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: run_units.yaml
finml/: fetch-symbol.py  interface.py  ts_model.py
finml/models/: arima.py
