[project]
name = "finml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "pandas>=2",
    "scipy>=1.15.3",
    "yfinance>=0.2.59",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length=120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]